--- a/onlineBookShop_stateManagement/src/main/webapp/WEB-INF/web.xml
+++ b/onlineBookShop_stateManagement/src/main/webapp/WEB-INF/web.xml
@@ -50,4 +50,14 @@
     <servlet-name>LogoutServlet</servlet-name>
     <url-pattern>/logout</url-pattern>
   </servlet-mapping>
+  
+  
+ <!--  <session-config>
+  	<session-timeout>30</session-timeout>
+  	<cookie-config>
+  		<name>SID</name>
+  	</cookie-config>
+  	<tracking-mode>URL</tracking-mode>
+  </session-config> -->
+  
 </web-app>
